# rules_erlang

./: BUILD.bazel  MODULE.bazel  erlang_app.bzl  erlang_app_sources.bzl  erlang_erts_layer.bzl  erlang_release.bzl  erlang_release_bundle.bzl  erlang_sys_config.bzl  hex_archive.bzl  untar.bzl
bzlmod/: extensions.bzl
docs/: building_releases.md
private/: app_file.bzl  ct.bzl  dialyze.bzl  erl_eval.bzl  erlang_asn1.bzl  erlang_build.bzl  erlang_bytecode.bzl  erlang_bytecode2.bzl  erlang_dia.bzl  erlang_tool.bzl  erlang_xrl_yrl.bzl  escript_archive.bzl  escript_flat.bzl  escript_wrapper.bzl  eunit.bzl  extract_app_test.bzl  ez.bzl  generlang.bzl  plt.bzl  shell.bzl  transitions.bzl  util.bzl  xref.bzl  xref2.bzl
repositories/: BUILD_external.tpl  BUILD_internal.tpl  BUILD_prebuilt.tpl  erlang_config.bzl
tools/: BUILD.bazel  erlang_headers.bzl  erlang_toolchain.bzl  erlang_vars.bzl  run_script.sh.tpl
tools/build_release/: BUILD.bazel
tools/build_release/src/: build_release.erl
