load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load(":util_test.bzl", "util_test_suite")
load(
    "//:erlang_release.bzl",
    "erlang_release",
)

config_setting(
    name = "debug_build",
    values = {
        "compilation_mode": "dbg",
    },
)

string_flag(
    name = "erlang_home",
    build_setting_default = "",
    visibility = ["//visibility:public"],
)

string_flag(
    name = "erlang_version",
    build_setting_default = "",
    visibility = ["//visibility:public"],
)

string_flag(
    name = "ct_logdir",
    build_setting_default = "",
    visibility = ["//visibility:public"],
)

string_flag(
    name = "ct_test_windows_logdir_drive_letter",
    build_setting_default = "b",
    visibility = ["//visibility:public"],
)

util_test_suite(name = "util_tests")

# Test target for erlang_release rule
# Create a test release from the erl_attrs_to_json tool
erlang_release(
    name = "test_erl_attrs_release",
    app = "//tools/erl_attrs_to_json:erlang_app",
    release_name = "erl_attrs_rel",
    release_version = "1.0.0",
)
